Quantifier Evaulator done

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,16 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.044749999999999984)"
+       "['AedesQuinx',\n",
+       " 'AedesSex',\n",
+       " 'ArabicDigit',\n",
+       " 'BNG',\n",
+       " 'HTRU',\n",
+       " 'anuranCalls',\n",
+       " 'click-prediction',\n",
+       " 'cmc',\n",
+       " 'covtype_reduced',\n",
+       " 'default_credit_card_clients',\n",
+       " 'eeg',\n",
+       " 'jm1-processed',\n",
+       " 'letter-recognition',\n",
+       " 'magic',\n",
+       " 'mozilla',\n",
+       " 'namao']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,16 +35,26 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "data = pd.read_csv('./evaluation_table.csv')\n",
+    "def load_train_test_data(dataset_name, skip_processed = False):\n",
+    "    train_df = pd.read_csv(f\"./data/train_data/{dataset_name}.csv\")\n",
+    "    y_train = train_df.pop(train_df.columns[-1])\n",
+    "    X_train = train_df\n",
     "\n",
-    "a = data.loc[data['quantifier'] == 'ACC']\n",
-    "a.reset_index(drop=True, inplace=True)\n",
+    "    test_df = pd.read_csv(f\"./data/test_data/{dataset_name}.csv\")\n",
+    "    y_test = test_df.pop(test_df.columns[-1])\n",
+    "    X_test = test_df\n",
     "\n",
-    "aedes = a.loc[a['dataset'] == 'AedesQuinx']\n",
-    "np.mean(aedes['abs_error'].tolist())\n",
-    "# means = a.groupby('dataset').aggregate(\"mean\")\n",
-    "# means\n",
-    "# a"
+    "    return X_train.to_numpy(), y_train.to_numpy(), X_test.to_numpy(), y_test.to_numpy()\n",
+    "\n",
+    "# def is_already_processed(dataset_path):\n",
+    "\n",
+    "\n",
+    "\n",
+    "# evaluation_table = pd.read_csv('./evaluation_table.csv')['dataset'].unique().tolist()\n",
+    "# evaluation_table\n",
+    "# evaluation_table.columns\n",
+    "# evaluation_table['dataset'].unique().tolist()\n",
+    "\n"
    ]
   }
  ],
