Still working on the meta-table construction

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,22 +27,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "np.float64(0.0144999999999999)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[0]['quantifier']"
+    "df = pd.read_csv('./test.csv')\n",
+    "\n",
+    "iterables = [df['quantifier'].unique().tolist(), df['dataset'].unique().tolist()]\n",
+    "index = pd.MultiIndex.from_product(iterables, names=[\"quantifier\", \"dataset\"])\n",
+    "\n",
+    "abs_error_list = df[\"abs_error\"].tolist()\n",
+    "run_time_list = df[\"run_time\"].tolist()\n",
+    "new_df = pd.DataFrame({\"abs_error\": abs_error_list, \"run_time\": run_time_list}, index=index)\n",
+    "# df.pop('quantifier')\n",
+    "# df.pop('dataset')\n",
+    "\n",
+    "# df\n",
+    "\n",
+    "new_df.loc['ACC', 'AedesSex']['abs_error']\n",
+    "\n",
+    "# X_train = meta_features.values\n",
+    "# y_train = new_df.loc['DyS']['abs_error'].values\n",
+    "\n",
+    "# # CC\n",
+    "# fit(X_train, y_train)\n",
+    "\n",
+    "# rec_dict = {\"CC\": rec, \"ACC\": rec}\n",
+    "\n",
+    "# dataset_novo -> extrai meta features -> linha de metafeatures\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# y_train\n",
+    "# # # index.get_loc()"
    ]
   }
  ],
