Implemented a method to save the meta-table of a fitted recommender and a method to load it and fit it to another recommender. This is safer than the persist_model and load_model methods.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1161,37 +1161,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'ACC'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\coenL\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'ACC'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mevaluation_table\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mACC\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAedesQuinx\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\coenL\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\Users\\coenL\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'ACC'"
-     ]
-    }
-   ],
-   "source": [
-    "evaluation_table['ACC'][\"AedesQuinx\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -1237,6 +1206,361 @@
     "print(old_win_count)\n",
     "print(draw_count)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from quantifier_recommender import QuantifierRecommender\n",
+    "\n",
+    "qtf_rec = QuantifierRecommender.load_model(\"s_qtf_recommender.pkl\")\n",
+    "\n",
+    "qtf_rec.save_meta_table(\"./recommender_data/meta_features_table.csv\", \"./recommender_data/evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attr_conc.mean</th>\n",
+       "      <th>attr_conc.sd</th>\n",
+       "      <th>attr_ent.mean</th>\n",
+       "      <th>attr_ent.sd</th>\n",
+       "      <th>attr_to_inst</th>\n",
+       "      <th>best_node.mean</th>\n",
+       "      <th>best_node.sd</th>\n",
+       "      <th>can_cor.mean</th>\n",
+       "      <th>can_cor.sd</th>\n",
+       "      <th>cat_to_num</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tree_imbalance.sd</th>\n",
+       "      <th>tree_shape.mean</th>\n",
+       "      <th>tree_shape.sd</th>\n",
+       "      <th>var.mean</th>\n",
+       "      <th>var.sd</th>\n",
+       "      <th>var_importance.mean</th>\n",
+       "      <th>var_importance.sd</th>\n",
+       "      <th>w_lambda</th>\n",
+       "      <th>worst_node.mean</th>\n",
+       "      <th>worst_node.sd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AedesQuinx</th>\n",
+       "      <td>0.0492</td>\n",
+       "      <td>0.013558</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000078</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.450229</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.189334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AedesSex</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.999554</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.658878</td>\n",
+       "      <td>0.435942</td>\n",
+       "      <td>0.559867</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.176336</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>anuranCalls</th>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.227146</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.442822</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 111 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             attr_conc.mean  attr_conc.sd  attr_ent.mean  attr_ent.sd  \\\n",
+       "AedesQuinx           0.0492      0.013558       1.000000     0.000078   \n",
+       "AedesSex             0.0000      0.000000       0.999554     0.000000   \n",
+       "anuranCalls          1.0000      1.000000       0.000000     1.000000   \n",
+       "\n",
+       "             attr_to_inst  best_node.mean  best_node.sd  can_cor.mean  \\\n",
+       "AedesQuinx            0.0        0.000000      0.450229           0.0   \n",
+       "AedesSex              0.0        1.000000      0.000000           0.0   \n",
+       "anuranCalls           1.0        0.227146      1.000000           0.0   \n",
+       "\n",
+       "             can_cor.sd  cat_to_num  ...  tree_imbalance.sd  tree_shape.mean  \\\n",
+       "AedesQuinx          0.0         0.0  ...           0.000000         0.000000   \n",
+       "AedesSex            0.0         0.0  ...           0.658878         0.435942   \n",
+       "anuranCalls         0.0         0.0  ...           1.000000         1.000000   \n",
+       "\n",
+       "             tree_shape.sd  var.mean  var.sd  var_importance.mean  \\\n",
+       "AedesQuinx        0.000000       0.0     0.0                  0.0   \n",
+       "AedesSex          0.559867       0.0     0.0                  0.0   \n",
+       "anuranCalls       1.000000       0.0     0.0                  1.0   \n",
+       "\n",
+       "             var_importance.sd  w_lambda  worst_node.mean  worst_node.sd  \n",
+       "AedesQuinx            0.000000       0.0         0.000000       0.189334  \n",
+       "AedesSex              1.000000       0.0         0.176336       1.000000  \n",
+       "anuranCalls           0.442822       0.0         1.000000       0.000000  \n",
+       "\n",
+       "[3 rows x 111 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qtf = QuantifierRecommender()\n",
+    "\n",
+    "qtf.load_meta_table(\"./recommender_data/meta_features_table.csv\", \"./recommender_data/evaluation_table.csv\")\n",
+    "\n",
+    "qtf.meta_features_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qtf = QuantifierRecommender()\n",
+    "qtf.load_meta_table_and_fit(\"./recommender_data/meta_features_table.csv\", \"./recommender_data/evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attr_conc.mean</th>\n",
+       "      <th>attr_conc.sd</th>\n",
+       "      <th>attr_ent.mean</th>\n",
+       "      <th>attr_ent.sd</th>\n",
+       "      <th>attr_to_inst</th>\n",
+       "      <th>best_node.mean</th>\n",
+       "      <th>best_node.sd</th>\n",
+       "      <th>can_cor.mean</th>\n",
+       "      <th>can_cor.sd</th>\n",
+       "      <th>cat_to_num</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tree_imbalance.sd</th>\n",
+       "      <th>tree_shape.mean</th>\n",
+       "      <th>tree_shape.sd</th>\n",
+       "      <th>var.mean</th>\n",
+       "      <th>var.sd</th>\n",
+       "      <th>var_importance.mean</th>\n",
+       "      <th>var_importance.sd</th>\n",
+       "      <th>w_lambda</th>\n",
+       "      <th>worst_node.mean</th>\n",
+       "      <th>worst_node.sd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AedesQuinx</th>\n",
+       "      <td>0.019865</td>\n",
+       "      <td>0.016661</td>\n",
+       "      <td>4.723763</td>\n",
+       "      <td>0.427495</td>\n",
+       "      <td>0.001125</td>\n",
+       "      <td>0.742375</td>\n",
+       "      <td>0.137430</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.050013</td>\n",
+       "      <td>0.003325</td>\n",
+       "      <td>0.009905</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.037037</td>\n",
+       "      <td>0.072402</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.572500</td>\n",
+       "      <td>0.076364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AedesSex</th>\n",
+       "      <td>0.017272</td>\n",
+       "      <td>0.015079</td>\n",
+       "      <td>4.723431</td>\n",
+       "      <td>0.427459</td>\n",
+       "      <td>0.001125</td>\n",
+       "      <td>0.950167</td>\n",
+       "      <td>0.054558</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.076568</td>\n",
+       "      <td>0.021071</td>\n",
+       "      <td>0.035680</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.037037</td>\n",
+       "      <td>0.169853</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.596042</td>\n",
+       "      <td>0.112341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>anuranCalls</th>\n",
+       "      <td>0.069978</td>\n",
+       "      <td>0.131726</td>\n",
+       "      <td>3.980382</td>\n",
+       "      <td>0.889031</td>\n",
+       "      <td>0.003341</td>\n",
+       "      <td>0.789574</td>\n",
+       "      <td>0.238623</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.090316</td>\n",
+       "      <td>0.044033</td>\n",
+       "      <td>0.055943</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.045455</td>\n",
+       "      <td>0.115556</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.706004</td>\n",
+       "      <td>0.067961</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 111 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             attr_conc.mean  attr_conc.sd  attr_ent.mean  attr_ent.sd  \\\n",
+       "AedesQuinx         0.019865      0.016661       4.723763     0.427495   \n",
+       "AedesSex           0.017272      0.015079       4.723431     0.427459   \n",
+       "anuranCalls        0.069978      0.131726       3.980382     0.889031   \n",
+       "\n",
+       "             attr_to_inst  best_node.mean  best_node.sd  can_cor.mean  \\\n",
+       "AedesQuinx       0.001125        0.742375      0.137430           0.0   \n",
+       "AedesSex         0.001125        0.950167      0.054558           0.0   \n",
+       "anuranCalls      0.003341        0.789574      0.238623           0.0   \n",
+       "\n",
+       "             can_cor.sd  cat_to_num  ...  tree_imbalance.sd  tree_shape.mean  \\\n",
+       "AedesQuinx          0.0         0.0  ...           0.050013         0.003325   \n",
+       "AedesSex            0.0         0.0  ...           0.076568         0.021071   \n",
+       "anuranCalls         0.0         0.0  ...           0.090316         0.044033   \n",
+       "\n",
+       "             tree_shape.sd  var.mean  var.sd  var_importance.mean  \\\n",
+       "AedesQuinx        0.009905       0.0     0.0             0.037037   \n",
+       "AedesSex          0.035680       0.0     0.0             0.037037   \n",
+       "anuranCalls       0.055943       0.0     0.0             0.045455   \n",
+       "\n",
+       "             var_importance.sd  w_lambda  worst_node.mean  worst_node.sd  \n",
+       "AedesQuinx            0.072402       0.0         0.572500       0.076364  \n",
+       "AedesSex              0.169853       0.0         0.596042       0.112341  \n",
+       "anuranCalls           0.115556       0.0         0.706004       0.067961  \n",
+       "\n",
+       "[3 rows x 111 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
