Still implementing a leave-one-out method for all the quantifiers + KQuantifier. Recommender refitted.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit QuantifierRecommender and save the resulting Meta-Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from quantifier_recommender import QuantifierRecommender\n",
+    "\n",
+    "recommender = QuantifierRecommender(supervised=True)\n",
+    "recommender.fit(datasets_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
+    "recommender.save_meta_table(\"./recommender_data/meta_table.h5\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -2009,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
