Evaluation method of KQuantifier done. But it has some errors getting the correct predicted prevalence.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,255 +42,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>quantifier</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>sample_size</th>\n",
-       "      <th>real_prev</th>\n",
-       "      <th>pred_prev</th>\n",
-       "      <th>abs_error</th>\n",
-       "      <th>run_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ACC</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.026</td>\n",
-       "      <td>0.000258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ACC</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.024</td>\n",
-       "      <td>0.000258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ACC</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.023</td>\n",
-       "      <td>0.000261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ACC</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.039</td>\n",
-       "      <td>0.000259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ACC</td>\n",
-       "      <td>AedesQuinx</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.058</td>\n",
-       "      <td>0.000258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4395</th>\n",
-       "      <td>X</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.007</td>\n",
-       "      <td>0.000354</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4396</th>\n",
-       "      <td>X</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.006</td>\n",
-       "      <td>0.000351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4397</th>\n",
-       "      <td>X</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.000354</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4398</th>\n",
-       "      <td>X</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>0.009</td>\n",
-       "      <td>0.000352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4399</th>\n",
-       "      <td>X</td>\n",
-       "      <td>winetype</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>0.000352</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4400 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     quantifier     dataset  sample_size  real_prev  pred_prev  abs_error  \\\n",
-       "0           ACC  AedesQuinx          100       0.00       0.03      0.026   \n",
-       "1           ACC  AedesQuinx          100       0.05       0.05      0.024   \n",
-       "2           ACC  AedesQuinx          100       0.11       0.08      0.023   \n",
-       "3           ACC  AedesQuinx          100       0.16       0.08      0.039   \n",
-       "4           ACC  AedesQuinx          100       0.21       0.10      0.058   \n",
-       "...         ...         ...          ...        ...        ...        ...   \n",
-       "4395          X    winetype          100       0.79       0.80      0.007   \n",
-       "4396          X    winetype          100       0.84       0.84      0.006   \n",
-       "4397          X    winetype          100       0.89       0.90      0.012   \n",
-       "4398          X    winetype          100       0.95       0.97      0.009   \n",
-       "4399          X    winetype          100       1.00       0.98      0.004   \n",
-       "\n",
-       "      run_time  \n",
-       "0     0.000258  \n",
-       "1     0.000258  \n",
-       "2     0.000261  \n",
-       "3     0.000259  \n",
-       "4     0.000258  \n",
-       "...        ...  \n",
-       "4395  0.000354  \n",
-       "4396  0.000351  \n",
-       "4397  0.000354  \n",
-       "4398  0.000352  \n",
-       "4399  0.000352  \n",
-       "\n",
-       "[4400 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "quantifiers_eval"
+    "Evaluate the KQuantifier for each dataset using APP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from k_quantifier import KQuantifier\n",
+    "\n",
+    "k_quantifier = KQuantifier()\n",
+    "k_quantifier_eval = k_quantifier.evaluation(recommender_eval, quantifiers_eval, \"./plot_data/k_quantifier_evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join the Quantifiers Evaluation Table with the KQuantifier Evaluation Table"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[1;32mc:\\users\\coenl\\appdata\\local\\temp\\ipykernel_8040\\847601083.py\u001b[0m(13)\u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
-      "\n",
-      "     quantifier     dataset  sample_size  real_prev  pred_prev  abs_error  \\\n",
-      "0           ACC  AedesQuinx          100       0.00       0.03      0.026   \n",
-      "1           ACC  AedesQuinx          100       0.05       0.05      0.024   \n",
-      "2           ACC  AedesQuinx          100       0.11       0.08      0.023   \n",
-      "3           ACC  AedesQuinx          100       0.16       0.08      0.039   \n",
-      "4           ACC  AedesQuinx          100       0.21       0.10      0.058   \n",
-      "...         ...         ...          ...        ...        ...        ...   \n",
-      "4015          X  AedesQuinx          100       0.79       0.78      0.035   \n",
-      "4016          X  AedesQuinx          100       0.84       0.86      0.048   \n",
-      "4017          X  AedesQuinx          100       0.89       0.90      0.050   \n",
-      "4018          X  AedesQuinx          100       0.95       0.92      0.035   \n",
-      "4019          X  AedesQuinx          100       1.00       1.00      0.009   \n",
-      "\n",
-      "      run_time  \n",
-      "0     0.000258  \n",
-      "1     0.000258  \n",
-      "2     0.000261  \n",
-      "3     0.000259  \n",
-      "4     0.000258  \n",
-      "...        ...  \n",
-      "4015  0.000340  \n",
-      "4016  0.000346  \n",
-      "4017  0.000341  \n",
-      "4018  0.000348  \n",
-      "4019  0.000373  \n",
-      "\n",
-      "[220 rows x 7 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "complete_evaluation_table = pd.concat([quantifiers_eval, k_quantifier_eval], axis=0)\n",
+    "complete_evaluation_table.to_csv(\"./plot_data/complete_evaluation_table.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pdb\n",
     "\n",
-    "k_quantifier_eval = pd.DataFrame(columns=[\"quantifier\", \"dataset\", \"sample_size\", \"real_prev\", \"pred_prev\", \"abs_error\", \"run_time\"])\n",
-    "\n",
+    "k_quantifier_eval = pd.DataFrame(columns=[\"quantifier\", \"dataset\", \"sample_size\",\n",
+    "                                          \"real_prev\", \"pred_prev\", \"abs_error\",\n",
+    "                                          \"run_time\"])\n",
     "for dataset in quantifiers_eval[\"dataset\"].unique().tolist():\n",
     "    ranking = recommender_eval.loc[dataset][\"predicted_ranking\"]\n",
-    "    rows_filtered_by_dataset = quantifiers_eval[quantifiers_eval[\"dataset\"] == dataset]\n",
-    "    \n",
-    "    pdb.set_trace()\n",
+    "    rows_by_dataset = quantifiers_eval[quantifiers_eval[\"dataset\"] == dataset]\n",
+    "    alphas = rows_by_dataset[\"real_prev\"].unique().tolist()\n",
     "\n",
-    "    for k in range(1, 11):\n",
-    "        for i in range(0, k):\n",
-    "            \n",
-    "            predicted_prev_list.append(quantifiers_eval.loc[dataset][\"pred_prev\"][i])\n",
-    "        \n",
-    "    pdb.set_trace()"
+    "    predicted_prev_list = []\n",
+    "    for k in range(1, 12):\n",
+    "        for alph in alphas:\n",
+    "            run_time_sum = 0\n",
+    "            sample_size = 0\n",
+    "            for i in range(0, k):\n",
+    "                row = rows_by_dataset[(rows_by_dataset[\"real_prev\"] == alph) & (rows_by_dataset[\"quantifier\"] == ranking[i])]\n",
+    "                predicted_prev_list.append(row[\"pred_prev\"].values[0])\n",
+    "                run_time_sum += row[\"run_time\"].values[0]\n",
+    "                sample_size = row[\"sample_size\"].values[0]\n",
+    "            k_quantifier_row = {\"quantifier\": \"Top-\" + str(k),\n",
+    "                                \"dataset\": dataset,\n",
+    "                                \"sample_size\": sample_size,\n",
+    "                                \"real_prev\": alph,\n",
+    "                                \"pred_prev\": np.median(predicted_prev_list),\n",
+    "                                \"abs_error\": np.abs(np.median(predicted_prev_list) - alph),\n",
+    "                                \"run_time\": run_time_sum}\n",
+    "            k_quantifier_eval.loc[len(k_quantifier_eval)] = k_quantifier_row        \n",
+    "k_quantifier_eval.sort_values(by=['quantifier', 'dataset'], inplace=True)\n",
+    "k_quantifier_eval.reset_index(drop=True, inplace=True)\n",
+    "k_quantifier_eval.to_csv(\"./plot_data/k_quantifier_evaluation_table.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do k_eval_1 and k_eval_2 have the exact same values? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "k_eval_1 = pd.read_csv(\"./plot_data/k_quantifier_evaluation_table.csv\")\n",
+    "k_eval_2 = pd.read_csv(\"./plot_data/k_quantifier_evaluation_table2.csv\")\n",
+    "\n",
+    "comparison = k_eval_1.equals(k_eval_2)\n",
+    "print(\"Do k_eval_1 and k_eval_2 have the exact same values?\", comparison)"
    ]
   },
   {
