--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -16,7 +16,7 @@
     "from quantifier_recommender import QuantifierRecommender\n",
     "\n",
     "recommender = QuantifierRecommender(supervised=True)\n",
-    "a = recommender.fit(datasets_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
+    "recommender.fit(datasets_path=\"./datasets/\", train_data_path=\"./data/train_data/\", test_data_path=\"./data/test_data/\")\n",
     "recommender.save_meta_table(\"./recommender_data/meta_table.h5\")"
    ]
   },
